vitrail-pg-macros/tests/ui/fail/insert_input_wrong_type.stderr
error[E0277]: the trait bound `i64: __VitrailInsertInputType_insert_schema_user_email` is not satisfied
  --> tests/ui/fail/insert_input_wrong_type.rs:15:12
   |
15 |     email: i64,
   |            ^^^ the trait `__VitrailInsertInputType_insert_schema_user_email` is not implemented for `i64`
   |
help: the trait `__VitrailInsertInputType_insert_schema_user_email` is implemented for `std::string::String`
  --> tests/ui/fail/insert_input_wrong_type.rs:3:1
   |
 3 | / schema! {
 4 | |     name insert_schema
 5 | |
 6 | |     model user {
...  |
10 | | }
   | |_^
note: required by a bound in `__vitrail_assert_insert_input_field_type`
  --> tests/ui/fail/insert_input_wrong_type.rs:3:1
   |
 3 | / schema! {
 4 | |     name insert_schema
 5 | |
 6 | |     model user {
...  |
10 | | }
   | |_^ required by this bound in `__vitrail_assert_insert_input_field_type`
11 |
12 |   #[derive(InsertInput)]
   |            ----------- in this derive macro expansion
   = note: this error originates in the macro `schema` which comes from the expansion of the derive macro `InsertInput` (in Nightly builds, run with -Z macro-backtrace for more info)
